# nrf-pac

./: Cargo.toml  README.md  build.rs  device.x  rust-toolchain.toml  transform.yaml  update.sh
.github/ci/: doc.sh
src/: _vectors.rs  aar.rs  acl.rs  cc_host_rgf.rs  ccm.rs  clock.rs  comp.rs  cryptocell.rs  ecb.rs  egu0.rs  ficr.rs  fpu.rs  gpiote.rs  i2s.rs  lib.rs  lpcomp.rs  mwu.rs  nfct.rs  nvmc.rs  p0.rs  pdm.rs  power.rs  ppi.rs  pwm0.rs  qdec.rs  qspi.rs  radio.rs  rng.rs  rtc0.rs  saadc.rs  spi0.rs  spim0.rs  spis0.rs  swi0.rs  temp.rs  timer0.rs  timer3.rs  twi0.rs  twim0.rs  twis0.rs  (+5 more)
src/aar/: regs.rs  vals.rs
src/acl/: regs.rs  vals.rs
src/cc_host_rgf/: regs.rs  vals.rs
src/ccm/: regs.rs  vals.rs
src/clock/: regs.rs  vals.rs
src/comp/: regs.rs  vals.rs
src/cryptocell/: regs.rs  vals.rs
src/ecb/: regs.rs
src/egu0/: regs.rs
src/ficr/: regs.rs  vals.rs
src/gpiote/: regs.rs  vals.rs
src/i2s/: regs.rs  vals.rs
src/lpcomp/: regs.rs  vals.rs
src/mwu/: regs.rs
src/nfct/: regs.rs  vals.rs
src/nvmc/: regs.rs  vals.rs
src/p0/: regs.rs  vals.rs
src/pdm/: regs.rs  vals.rs
src/power/: regs.rs  vals.rs
src/ppi/: regs.rs
src/pwm0/: regs.rs  vals.rs
src/qdec/: regs.rs  vals.rs
src/qspi/: regs.rs  vals.rs
src/radio/: regs.rs  vals.rs
src/rng/: regs.rs  vals.rs
src/rtc0/: regs.rs  vals.rs
src/saadc/: regs.rs  vals.rs
src/spi0/: regs.rs  vals.rs
src/spim0/: regs.rs  vals.rs
src/spis0/: regs.rs  vals.rs
src/temp/: regs.rs
src/timer0/: regs.rs  vals.rs
src/timer3/: regs.rs  vals.rs
src/twi0/: regs.rs  vals.rs
svd/: nrf52810.svd  nrf52811.svd  nrf52832.svd  nrf52840.yaml  nrf9120.svd  nrf9151.svd  nrf9160.svd
(+42 files in other folders)
