[package]
name = "nrf-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }

[features]
rt = ["cortex-m-rt/device"]

nrf51 = []
nrf52805 = []
nrf52810 = []
nrf52811 = []
nrf52820 = []
nrf52832 = []
nrf52833 = []
nrf52840 = []
nrf5340-app = []
nrf5340-net = []
nrf54l15-app = []
nrf54l15-flpr = []
nrf9120 = []
nrf9160 = []
