[package]
name = "nrf-pac"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["no-std", "arm", "cortex-m", "nrf", "peripherals"]
repository = "https://github.com/embassy-rs/nrf-pac"
documentation = "https://docs.embassy.dev/nrf-pac"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = ">=0.6.15,<0.8", optional = true }

[features]
rt = ["cortex-m-rt/device"]

nrf51 = []
nrf52805 = []
nrf52810 = []
nrf52811 = []
nrf52820 = []
nrf52832 = []
nrf52833 = []
nrf52840 = []
nrf5340-app = []
nrf5340-net = []
nrf54l15-app = []
nrf54l15-flpr = []
nrf9120 = []
nrf9160 = []
nrf9151 = []

[package.metadata.embassy_docs]
src_base = "https://github.com/embassy-rs/nrf-pac/blob/v$VERSION/src/"
src_base_git = "https://github.com/embassy-rs/nrf-pac/blob/$COMMIT/src/"
features = ["rt"]
flavors = [
    { regex_feature = "nrf51", target = "thumbv6m-none-eabi" },
    { regex_feature = "nrf52.*", target = "thumbv7em-none-eabihf" },
    { regex_feature = "nrf53.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "nrf54.*", target = "thumbv8m.main-none-eabihf" },
    { regex_feature = "nrf91.*", target = "thumbv8m.main-none-eabihf" },
]
